vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalog
  namespace: ecommerce
spec:
  hosts:
  - shop.example.com
  gateways:
  - ecommerce-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: opentelemetry-demo-productcatalogservice.ecommerce.svc.cluster.local
        port:
          number: 8088
